2005-06-06 Magnus Hagdorn
 * erosion.f90: clean up
 * erosion_transport_fv.f90: ditto
 * test_geometry.f90: ditto
 * test_integrate2d.f90: ditto
 * glimmer_interpolate2d.f90: new routine to init bilinear transform between
   two coord systems
 * erosion_setup.f90: remove transport time step (not needed anymore)
 * erosion_types.f90: ditto, use allocation routines from coord module 

2005-06-06 Magnus Hagdorn
 * geometry.f90: replace .eq. and .ne. using tolerance
 * erosion_vars.def: change coord systems of erate (to velo grid) and erosion
   (to sed grid)
 * erosion_integrate2d.f90: fix bug
 * glimmer_interpolate2d.f90: fix another bug
 * erosion_transport_fv.f90: move sediment coord from transport type to erosion type
 * erosion_transport_interp.f90: ditto
 * erosion.f90: use glimmer_interpolate2d for interpolation
 * simple_erosion.f90: fill erosion dimension variables
 * eis_erosion.f90: ditto

2005-06-06 Magnus Hagdorn
 * moved glimmer_coordinates.f90 to glimmer sources
 * Makefile.am: removed glimmer_coordinates.f90
 * erosion_advect.f90: changed types to new names from glimmer
 * erosion_integrate2d.f90: ditto
 * erosion_transport_fv.f90: ditto
 * erosion_transport_interp.f90: ditto
 * erosion_types.f90: ditto
 * geometry.f90: ditto, moved point def to glimmer_coordinates.f90
 * glimmer_interpolate2d.f90: ditto
 * test_advect.f90: ditto
 * test_geometry.f90: ditto
 * test_integrate2d.f90: ditto
 * test_interpolate2d.f90: ditto

2005-06-01 Magnus Hagdorn
 * erosion_vars.def: new sediment dimensions xs, ys
 * erosion_nc_custom.f90: filling erosion dim variables
 * Makefile.am: hooked up erosion_nc_custom.f90
 * erosion_setup.f90: added sediment grid factor, only print transport
   variables if transport is enabled
 * erosion_types.f90: moved transport type to here, added sediment grid,
   allocate seds variables on sed grid
 * erosion.f90: load erosion modules, initialise sed grid
 * erosion_transport_fv.f90: removed transport type, use sediment grid