@@ -23,7 +23,7 @@ sliding_law = 0
 vertical_integration = 1
 
 [time]
-tend = 300000.
+tend = 2000000.
 dt = 5.
 ntem = 1.
 nvel = 1.
@@ -35,17 +35,19 @@ geothermal = -42e-3
 basal_tract_const = 1.e-3
 
 [Erosion]
+ntime = 20
 
 [Transport]
+grid_factor = 4
 
 [CF default]
-title: erosion
-comment: simple erosion
+title: er-tr, 20x5a, 20km/4
+comment: erosion + transport
 
 [CF output]
 name: er-transport1.nc
 frequency: 1000
-variables: thk bmlt temp uvel vvel bwat topg erate erosion seds1 seds2 seds3
+variables: thk bmlt temp uvel vvel bwat topg erate erosion seds1 seds2 seds3 taux tauy seds2_max accu
 
 [CF input]
 name: topo.nc
